k8s/ingress/nginx.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  labels:
    name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - pathType: ImplementationSpecific
            path: /api/v1/identity/?(.*)
            backend:
              service:
                name: identity-service
                port:
                  number: 4000
          - pathType: ImplementationSpecific
            path: /api/v1/users/?(.*)
            backend:
              service:
                name: user-service
                port:
                  number: 4000
          - pathType: ImplementationSpecific
            path: /api/v1/workspaces/?(.*)
            backend:
              service:
                name: workspace-service
                port:
                  number: 4000
